System Dictionaries: scrollbars fixed

--- a/client/src/components/settings/SystemDictionaries.css
+++ b/client/src/components/settings/SystemDictionaries.css
@@ -17,7 +17,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex: 1;
+  min-height: 0;
 }
 
 .actions {
