--- a/client/src/components/settings/forms/SystemDictionaryForm.css
+++ b/client/src/components/settings/forms/SystemDictionaryForm.css
@@ -14,6 +14,13 @@
  *  limitations under the License.
  */
 
+.container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-height: 0;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -28,6 +35,12 @@
 
 .error {
   color: red;
+}
+
+.items {
+  flex: 1;
+  min-height: 0;
+  overflow-y: auto;
 }
 
 .actions {
